First working version!

--- a/PayPalEventCodes.ini
+++ b/PayPalEventCodes.ini
@@ -47,7 +47,7 @@ XX = Currency conversion
 XX = Bank deposit to PayPal
 00 = General
 01 = PayPal-system
-02 = ACH funding (recovery)
+02 = ACH funding - recovery
 03 = EFT
 [T04]
 XX = Bank withdrawal from PayPal
@@ -98,8 +98,8 @@ XX = Reversal
 03 = Points usage
 04 = ACH deposit
 05 = General account hold
-06 = Payment (by PayPal)
-07 = Payment (Refund by merchant)
+06 = Payment - by PayPal
+07 = Payment - Refund by merchant
 08 = Fee reversal
 09 = Fee refund
 10 = Hold for dispute investigation
@@ -110,8 +110,8 @@ XX = Reversal
 15 = MassPay refund
 16 = Instant payment review
 17 = Rebate or cash back
-18 = Generic instrument/Open Wallet (seller)
-19 = Generic instrument/Open Wallet (buyer)
+18 = Generic instrument/Open Wallet - seller
+19 = Generic instrument/Open Wallet - buyer
 [T12]
 XX = Adjustment
 00 = General
@@ -135,7 +135,7 @@ XX = Hold for dispute investigation
 00 = General temporary hold
 01 = Open authorization
 02 = ACH deposit
-03 = Hold on available balance
+03 = 'Hold on balance'
 [T16]
 XX = Buyer credit deposit
 00 = Fundings
